--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Онлайн блокнот | keep.it</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" sizes=60x66 href="favicon.ico" type="image/x-icon">
+    <link rel="icon" sizes=60x66 href="img/favicon.ico" type="image/x-icon">
     <style>
         body {
             min-height: 100vh;
